--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Litomobile Demo</title>
-  <!-- <script src="litomobile.min.js"></script> 
-  <link rel="stylesheet" type="text/css" media="screen" href="litomobile.min.css" /> -->
+ <script src="litomobile.js"></script> 
+  <link rel="stylesheet" type="text/css" media="screen" href="litomobile.css" />  
   <style>
     body {
       margin: 0;
@@ -55,8 +55,8 @@
       min-width: 200px;
     }
   </style>
-  <script type="text/javascript" src="http://localhost:8080/index_bundle.js"></script>
-  <link rel="stylesheet" type="text/css" media="screen" href="http://localhost:8080/litomobile.css" />
+  <!-- <script type="text/javascript" src="http://localhost:8080/index_bundle.js"></script> -->
+  <!-- <link rel="stylesheet" type="text/css" media="screen" href="http://localhost:8080/litomobile.css" /> -->
 </head>
 
 <body>
